Clase 39 - Agregando los estados finales del juego

--- a/clase39-agregando-la-verificacion-del-color-elegido.html
+++ b/clase39-agregando-la-verificacion-del-color-elegido.html
@@ -12,6 +12,10 @@
         height: 100vh;
       }
 
+      * {
+        font-family: Arial;
+      }
+
       .gameboard {
         height: 100vh;
         width: 100vh;
@@ -92,6 +96,7 @@
       <div id="verde" class="color verde right" data-color="verde"></div>
       <button id="btnEmpezar" class="btn-start" onclick="empezarJuego()">Empezar a jugar!</button>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/2.1.2/sweetalert.min.js"></script>
     <script>
         const celeste = document.getElementById('celeste');
         const violeta = document.getElementById('violeta');
@@ -108,15 +113,23 @@
             }, 500);
           }
           inicializar() {
-            this.elegirColor = this.elegirColor.bind(this);
             this.siguienteNivel = this.siguienteNivel.bind(this);
-            btnEmpezar.classList.add('hide');
+            this.elegirColor = this.elegirColor.bind(this);
+            this.inicializar = this.inicializar.bind(this);
+            this.toggleBtnEmpezar();
             this.nivel = 1;
             this.colores = {
               celeste,
               violeta,
               naranja,
               verde
+            }
+          }
+          toggleBtnEmpezar() {
+            if(btnEmpezar.classList.contains('hide')) {
+              btnEmpezar.classList.remove('hide');
+            } else {
+              btnEmpezar.classList.add('hide');
             }
           }
           generarSecuencia() {
@@ -186,14 +199,22 @@
                 this.nivel++;
                 this.eliminarEventosClick();
                 if(this.nivel === (ULTIMO_NIVEL + 1)) {
-                  // Ganó
+                  this.ganoElJuego();
                 } else {
                   setTimeout(this.siguienteNivel, 1500);
                 }
               }
             } else {
-              // Perdió
+              this.perdioElJuego();
             }
+          }
+          ganoElJuego() {
+            swal('Simon dice','Ganaste','success')
+            .then(this.inicializar)
+          }
+          perdioElJuego() {
+            swal('Simon dice','Lo lamentamos, perdiste :(','error')
+              .then(this.inicializar)
           }
         }
         function empezarJuego() {
